--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "migrate:up": "npx sequelize-cli db:migrate ",
+    "migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "migrate:undoall": "npx sequelize-cli db:migrate:undo:all"
   },
   "author": "",
   "license": "ISC",
