--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,14 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"cmdk": "^1.0.0",
+		"embla-carousel-react": "^8.0.0",
 		"lucide-react": "^0.363.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.2",
 		"react-router-dom": "^6.22.3",
+		"react-slick": "^0.30.2",
 		"tailwind-merge": "^2.2.2",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.22.4"
@@ -32,6 +35,7 @@
 		"@types/node": "^20.11.30",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
+		"@types/react-slick": "^0.23.13",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
 		"@vitejs/plugin-react": "^4.2.1",
